Implemento la actualización del año en el footer de forma dinámica y actualizo CV.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -63,7 +63,7 @@
           name="sparkles-outline"
         ></ion-icon>
         <br/>
-        &#169; Copyright YAG - 2022
+        &#169; Copyright YAG - {{ year }}
       </small>
     </div>
   </section>
